--- a/app/src/main/res/menu/detail.xml
+++ b/app/src/main/res/menu/detail.xml
@@ -10,4 +10,11 @@
         android:icon="@drawable/abc_ic_menu_share_mtrl_alpha"
         android:title="@string/action_share"
         app:showAsAction="always"/>
+
+    <item
+        android:id="@+id/action_settings"
+        android:icon="@drawable/ic_settings"
+        android:title="@string/action_settings"
+        app:showAsAction="ifRoom"/>
+
 </menu>
