--- a/app/src/main/res/menu/forecast.xml
+++ b/app/src/main/res/menu/forecast.xml
@@ -9,9 +9,17 @@
         android:icon="@drawable/ic_refresh"/>
 
     <item
+        android:id="@+id/action_settings"
+        android:title="@string/action_settings"
+        app:showAsAction="ifRoom"
+        android:icon="@drawable/ic_settings"/>
+
+    <item
         android:id="@+id/openMap"
         android:title="@string/onTheMap"
         app:showAsAction="ifRoom"
         android:icon="@drawable/ic_map"/>
+
+
 
 </menu>
